@@ -27,9 +27,9 @@
     </modules>
 
     <properties>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependency versions -->
@@ -178,7 +178,6 @@
                             </path>
                         </annotationProcessorPaths>
                         <compilerArgs>
-                            <arg>--enable-preview</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
